[gd_scene load_steps=3 format=3 uid="uid://q7kkagckti2a"]

[ext_resource type="Script" path="res://Resources/Prototype/block.gd" id="1_d7e1d"]
[ext_resource type="FontFile" uid="uid://ga4cr1p8vhcp" path="res://Assets/Fonts/ADOBEHEITISTD-REGULAR.OTF" id="2_djju8"]

[node name="block" type="Area2D"]
script = ExtResource("1_d7e1d")

[node name="blockCollisionPolygon" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
one_way_collision_margin = 2.0

[node name="number" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 12)
theme_override_fonts/font = ExtResource("2_djju8")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_block_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_block_area_exited"]
[connection signal="input_event" from="." to="." method="_on_block_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_block_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_block_mouse_exited"]
